# faiss-py

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
src/faiss_py/: __init__.py  index_flat_l2.py  indexflatip.py  indexflatl2.py  indexivfflat.py  kmeans.py
src/faiss_py/core/: exceptions.py  graph.py  index.py
src/faiss_py/helpers/: make_blobs.py
src/faiss_py/indexflatip/: __init__.py  indexflatip.py
src/faiss_py/indexflatl2/: __init__.py  indexflatl2.py
src/faiss_py/indexhnswflat/: README.md  indexhnswflat.py
src/faiss_py/indexivfflat/: __init__.py  indexivfflat.py
src/faiss_py/indexpq/: README.md  __init__.py  indexpq.py
src/faiss_py/kmeans/: kmeans.py
tests/: test_graph.py  test_index_flat_l2.py  test_indexflatip.py  test_indexflatl2.py  test_indexhnswflat.py  test_indexivfflat.py  test_indexpq.py  test_kmeans.py
