[project]
name = "faiss-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "jack@oneonrootx.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
faiss-py = "faiss_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
