[project]
name = "faiss-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "jack@oneonrootx.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
faiss-py = "faiss_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faiss-cpu>=1.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pytest>=8.4.0",
]
